# croak

./: .rustfmt.toml  Cargo.toml
.config/: config.toml
src/: cli.rs  config.rs  email.rs  log.rs  main.rs  process.rs  utils.rs
src/transport/: http.rs  mod.rs  smtp_direct.rs  smtp_relay.rs
