[package]
name = "croak"
version = "0.1.0"
edition = "2024"
description = "a database management tui"
repository = "https://github.com/achristmascarl/croak"
authors = ["Carl <achristmascarl@gmail.com>"]
build = "build.rs"

[profile.dev]
incremental = true

[profile.release]
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive", "string"] }
dirs = "6.0.0"
lazy_static = "1.5.0"

[build-dependencies]
anyhow = "1.0.102"
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "9.1.0", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
