[package]
name = "croak"
version = "0.1.0"
edition = "2024"
description = "a database management tui"
repository = "https://github.com/achristmascarl/croak"
authors = ["Carl <achristmascarl@gmail.com>"]
build = "build.rs"

[profile.dev]
incremental = true

[profile.release]
strip = "debuginfo"
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["cargo", "derive", "string"] }
config = "0.15.23"
ctrlc = { version = "3.5.2", features = ["termination"] }
dirs = "6.0.0"
enum_dispatch = "0.3.13"
hostname = "0.4.2"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1.23.1", features = ["v4"] }

[build-dependencies]
anyhow = "1.0.102"
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "9.1.0", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
